Cleanup timeline scss

--- a/client/styles/scss/partials/_base.scss
+++ b/client/styles/scss/partials/_base.scss
@@ -16,6 +16,9 @@ $gossip: #87D37C; // light, pale green
 $jade: #00B16A; // primary green, looks good against darkLynch background
 $cinnabar: #E74C3C; // secondary red
 
+/* Common Variables */
+$border-radius: 4px;
+
 body {
   background-color: $darkLynch;
 }
