--- a/client/styles/scss/partials/_button.scss
+++ b/client/styles/scss/partials/_button.scss
@@ -12,7 +12,7 @@
   align-items: center;
   justify-content: center;
   padding: 7px 0;
-  border-radius: 4px;
+  border-radius: $border-radius;
   font-weight: 200;
   font-size: 14px;
   &:link, &:hover, &:active, &:visited {
